# ieee-posit-benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  driver.c  driver.h  kernels.c  kernels.h  main.c  utils.c
.backup/: .gitignore  CMakeLists.txt
.backup/driver/cuda/: driver.cu
.backup/include/: RacEr_manycore.h  driver.h  host_kernels.h  kernels.h  utils.h
.backup/kernels/cuda/: blas_algorithms.cu  pi_approximation.c  pi_approximation.cu  sinusoid.cu
.backup/kernels/host/: blas_algorithms.c  inverse.c  logarithm.c  pi_approximation.c  sinusoid.c
.backup/kernels/omp/: inverse.c  monte_carlo.c  sinusoid.c  sqrt.c
.backup/kernels/racer/float_matrix_inverse/: kernel_float_matrix_inverse.c
.backup/kernels/racer/float_matrix_memcpy/: kernel_float_matrix_memcpy.c
.backup/kernels/racer/float_matrix_memset/: Makefile  kernel_float_matrix_memset.c
.backup/kernels/racer/float_vec_dotprod/: Makefile  kernel_float_vec_dotprod.c
.backup/racer/: .gitignore
.backup/tests/cuda/: test_float_matrix_mul.cu  test_float_vector_dotprod.cu  test_float_vector_dotprod_all_in_one.cu
.backup/tests/omp/: test_float_image_correlation.c  test_float_matrix_mul.c  test_float_pi_approximation.c  test_float_vector_add.c
.backup/tests/racer/test_float_matrix_inverse/: test_float_matrix_inverse.c
.backup/tests/racer/test_float_matrix_memset/: test_float_matrix_memset.c  test_float_matrix_memset.h
.backup/tests/racer/test_float_vec_dotprod/: test_float_vec_dotprod.c  test_float_vec_mul.c
.backup/utils/: accuracy_computation.c  display_data.c  utils.c
RacEr/: sgemm.cu  sgemm_cuda.cu  sgemm_racer.c
RacEr_f1/regression/: cl_manycore_regression.h
batch/: romeo.sh
documentation/: README.md  documentation.typ
documentation/aws/: guide.typ
documentation/aws/custom_kernel/: Makefile  custom_kernel.c
documentation/aws/custom_main/: custom_main.c
documentation/fpga/: guide.typ  zynq_modification.typ
documentation/fpga/AXI GPIO documentation ABTICS/: code vitis AXI GPIO EMIO.docx
documentation/fpga/AXI STREAM documentation ABTICS/: .~lock.User guide AXI STREAM.docx#  User guide AXI STREAM.docx  code vitis AXI STREAM.docx
documentation/fpga/AXI UARTLITE documentation ABTICS/: User guide AXI UARTLITE.docx  code vitis AXI UARTLITE.docx
documentation/fpga/posit_32bits/: posit32_axi.vhdl  transfer.vhdl
documentation/fpga/posit_hls/: .cproject  .project  .vitis_hls_log_all.xml  add.c  add.h  hls.app  test.c
documentation/fpga/posit_hls/.apc/: autopilot.apfmapping
documentation/fpga/posit_hls/solution1/: directives.tcl  script.tcl  solution1.aps  solution1_data.json
documentation/fpga/project_2/: .analytics  design_2_wrapper.xsa  project_2.xpr
documentation/fpga/project_2/.metadata/: version.ini
documentation/papers/: README.md
documentation/racer/: README.md
driver/: accuracy.c  accuracy_cuda.cu  benchmark.c  benchmark_cuda.cu  driver.c  driver_cuda.cu
driver/cuda/: accuracy.cu  benchmark.cu  driver.cu  lib.cu
driver/omp/: accuracy.c  benchmark.c  driver.c  lib.c
driver/racer/: driver.c  lib.c
driver/x86/: accuracy.c  benchmark.c  driver.c  lib.c
emulation/softposit/: test  test1.c
implementations/: README.md
implementations/cuda/: README.md  test_float_vector_dotprod.cu
implementations/emulations/softposit/: inf  inf.c  main  main.c  test  test1.c  test_gcc
implementations/flopoco/: README.md
implementations/racer/: README.md
include/: RacEr_cuda_lite_runtime.h  RacEr_manycore_arch.h  RacEr_manycore_cuda.h  RacEr_manycore_features.h  RacEr_set_tile_x_y.h  RacEr_tile_group_barrier.h  RacEr_tilegroup.h  cuda.h  driver.h  host_kernels.h  kernels.h  utils.h
kernels/Cuda/: gemm.cu  nbody.cu  reduction.cu
kernels/RacEr/: reduction.c
kernels/cuda/: blas_algorithms.cu  conversion.cu  inverse.cu  logarithms.cu  sinusoid.cu  sqrt.cu
kernels/host/: blas_algorithms.c  monte_carlo.c  pi_approximation.c  sinusoid.c  sqrt.c
kernels/ieee/: blas_algorithms.c  kernels.c  logarithm.c
kernels/omp/: blas_algorithms.c  conversion.c  image_correlation.c  inverse.c  logarithm.c  monte_carlo.c  pi_approximation.c  sinusoid.c  sqrt.c
kernels/racer/: sgemm.c
kernels/x86/: blas_algorithms.c  conversion.c  inverse.c  logarithm.c  monte_carlo.c  pi_approximation.c  sinusoid.c  sqrt.c
racer/f1/test_float_matrix_inverse/: test_float_matrix_inverse.h
racer/f1/test_float_matrix_memcpy/: test_float_matrix_memcpy.c
racer/f1/test_float_matrix_memset/: test_float_matrix_memset.c
racer/f1/test_float_vec_dotprod/: test_float_vec_dotprod.c
racer/import/: test_float_matrix_mul2.c  test_float_matrix_mul3.c
racer/import/float_matrix_mul2/: Makefile  kernel_float_matrix_mul2.c
racer/manycore/float_matrix_inverse/: Makefile
racer/manycore/float_matrix_memset/: kernel_float_matrix_memset.c
racer/manycore/float_vec_dotprod/: kernel_float_vec_dotprod.c
script/: foo.sh
software-implementation/: README.md
software-implementation/ceralaine/test/: compile.sh  main  main.c
software-implementation/softposit/: test  test_gcc.c
src/: driver.c  kernels.c  main.c  utils.c
tests/Cuda/: reduction.cu
tests/cuda/: inverse.cu  main.cu  test_double_matrix_inverse.cu  test_double_matrix_mul.cu  test_float_matrix_inverse.cu  test_float_matrix_mul.cu  test_float_pi_approximation.cu  test_float_vector_add.cu  test_float_vector_div.cu  test_float_vector_sqrt.cu
tests/ieee/: main.c
tests/omp/: inverse.c  main.c  test_float_matrix_inverse.c  test_float_matrix_mul.c  test_float_vector_div.c  test_float_vector_sqrt.c
tests/racer/: main.c
tests/x86/: inverse.c  main.c  test_float_matrix_mul.c
utils/: accuracy_computation.c  display_data.c  utils.c
(+856 files in other folders)
